--- a/my-fake-product-store/package.json
+++ b/my-fake-product-store/package.json
@@ -45,6 +45,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.20",
+    "miragejs": "^0.2.0-alpha.3",
     "postcss": "^8.4.47",
     "react-devtools": "^4.28.5",
     "tailwindcss": "^3.4.13"
