--- a/my-fake-product-store/package.json
+++ b/my-fake-product-store/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "start:mock": "cross-env REACT_APP_ENABLE_MOCK=true npm run start",
+    "start:mock:auth": "cross-env REACT_APP_ENABLE_MOCK=true REACT_APP_ENABLE_MOCK_AUTH=true npm run start",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
