--- a/steam-games-dataset-viewer-app/package.json
+++ b/steam-games-dataset-viewer-app/package.json
@@ -12,12 +12,18 @@
     "load": "node src/database/load/index.js"
   },
   "dependencies": {
+    "@chakra-ui/next-js": "^2.4.2",
+    "@chakra-ui/react": "^2.10.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
     "@vercel/postgres": "^0.9.0",
+    "framer-motion": "^11.11.8",
     "next": "14.2.14",
     "pg": "^8.13.0",
     "postgres": "^3.4.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.3.0",
     "stream-json": "^1.8.0"
   },
   "devDependencies": {
@@ -30,8 +36,6 @@
     "eslint-config-next": "14.2.14",
     "ley": "^0.8.1",
     "pg-connection-string": "^2.7.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
