--- a/steam-games-dataset-viewer-app/package.json
+++ b/steam-games-dataset-viewer-app/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint",
     "migrate:up": "ley --dir src/database/migrations up",
     "migrate:down": "ley --dir src/database/migrations down --all",
-    "load": "node src/database/load/index.js"
+    "load": "node src/database/load/index.js",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "dependencies": {
     "@chakra-ui/next-js": "^2.4.2",
@@ -27,15 +29,27 @@
     "stream-json": "^1.8.0"
   },
   "devDependencies": {
+    "@chakra-ui/storybook-addon": "^5.2.5",
+    "@chromatic-com/storybook": "^1.9.0",
     "@neondatabase/serverless": "^0.9.3",
+    "@storybook/addon-essentials": "^8.3.5",
+    "@storybook/addon-interactions": "^8.3.5",
+    "@storybook/addon-links": "^8.3.5",
+    "@storybook/addon-onboarding": "^8.3.5",
+    "@storybook/blocks": "^8.3.5",
+    "@storybook/nextjs": "^8.3.5",
+    "@storybook/react": "^8.3.5",
+    "@storybook/test": "^8.3.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
+    "eslint-plugin-storybook": "^0.9.0",
     "ley": "^0.8.1",
     "pg-connection-string": "^2.7.0",
+    "storybook": "^8.3.5",
     "typescript": "^5"
   }
 }
