Integrated swr library for api calls.

--- a/steam-games-dataset-viewer-app/.env.local.example
+++ b/steam-games-dataset-viewer-app/.env.local.example
@@ -1,9 +1,4 @@
-# Copy from .env.local on the Vercel dashboard
-# https://nextjs.org/learn/dashboard-app/setting-up-your-database#create-a-postgres-database
+VERCEL_ENV=
+PG_CLIENT=
 POSTGRES_URL=
-POSTGRES_PRISMA_URL=
-POSTGRES_URL_NON_POOLING=
-POSTGRES_USER=
-POSTGRES_HOST=
-POSTGRES_PASSWORD=
-POSTGRES_DATABASE=
+NEXT_PUBLIC_API_URL=
