--- a/steam-games-dataset-viewer-app/package.json
+++ b/steam-games-dataset-viewer-app/package.json
@@ -19,6 +19,7 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@vercel/postgres": "^0.9.0",
+    "axios": "^1.7.7",
     "framer-motion": "^11.11.8",
     "next": "14.2.14",
     "pg": "^8.13.0",
@@ -26,7 +27,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
-    "stream-json": "^1.8.0"
+    "stream-json": "^1.8.0",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@chakra-ui/storybook-addon": "^5.2.5",
