--- a/steam-games-dataset-viewer-app/package.json
+++ b/steam-games-dataset-viewer-app/package.json
@@ -46,6 +46,7 @@
     "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "axios-mock-adapter": "^2.1.0",
     "dotenv": "^16.4.5",
     "eslint": "^8",
     "eslint-config-next": "14.2.14",
