Updated pg to use Pool. Added new api route for getting metadata.

--- a/steam-games-dataset-viewer-app/.env.local.example
+++ b/steam-games-dataset-viewer-app/.env.local.example
@@ -1,4 +1,5 @@
-VERCEL_ENV=
-PG_CLIENT=
-POSTGRES_URL=
-NEXT_PUBLIC_API_URL=
+VERCEL_ENV=development
+PG_CLIENT=true
+POSTGRES_URL=postgresql://postgres:password@localhost:5432/steam-games-dataset
+NEXT_PUBLIC_API_URL=http://localhost:3000
+NEXT_USE_API_MOCK=true
