--- a/steam-games-dataset-viewer-app/package.json
+++ b/steam-games-dataset-viewer-app/package.json
@@ -27,6 +27,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-paginate": "^8.2.0",
     "stream-json": "^1.8.0",
     "swr": "^2.2.5"
   },
