--- a/steam-games-dataset-viewer-app/package.json
+++ b/steam-games-dataset-viewer-app/package.json
@@ -28,6 +28,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
+    "react-responsive-carousel": "^3.2.23",
     "stream-json": "^1.8.0",
     "swr": "^2.2.5"
   },
