--- a/steam-games-dataset-viewer-app/package.json
+++ b/steam-games-dataset-viewer-app/package.json
@@ -28,7 +28,8 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-paginate": "^8.2.0",
-    "react-responsive-carousel": "^3.2.23",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "stream-json": "^1.8.0",
     "swr": "^2.2.5"
   },
@@ -48,6 +49,7 @@
     "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-slick": "^0.23.13",
     "axios-mock-adapter": "^2.1.0",
     "dotenv": "^16.4.5",
     "eslint": "^8",
