--- a/steam-games-dataset-viewer-app/package.json
+++ b/steam-games-dataset-viewer-app/package.json
@@ -22,6 +22,7 @@
     "axios": "^1.7.7",
     "framer-motion": "^11.11.8",
     "next": "14.2.14",
+    "numeral": "^2.0.6",
     "pg": "^8.13.0",
     "postgres": "^3.4.4",
     "react": "^18",
@@ -46,6 +47,7 @@
     "@storybook/react": "^8.3.5",
     "@storybook/test": "^8.3.5",
     "@types/node": "^20",
+    "@types/numeral": "^2.0.5",
     "@types/pg": "^8.11.10",
     "@types/react": "^18",
     "@types/react-dom": "^18",
