--- a/find-flow-app/package.json
+++ b/find-flow-app/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.3.5",
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/bottom-tabs": "^7.0.0",
     "@react-navigation/native": "^7.0.0",
@@ -26,6 +27,7 @@
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.2",
     "expo-router": "~4.0.3",
+    "expo-secure-store": "^14.0.0",
     "expo-splash-screen": "~0.29.7",
     "expo-status-bar": "~2.0.0",
     "expo-symbols": "~0.2.0",
@@ -36,6 +38,7 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-otp-entry": "^1.7.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.0.0",
