--- a/find-flow-app/app.json
+++ b/find-flow-app/app.json
@@ -15,7 +15,7 @@
     },
     "ios": {
       "supportsTablet": false,
-      "bundleIdentifier": "com.anonymous.find-flow-app"
+      "bundleIdentifier": "com.ylfifa20xbox1.find-flow-app"
     },
     "android": {
       "adaptiveIcon": {
@@ -38,6 +38,12 @@
           "imageWidth": 200,
           "resizeMode": "contain",
           "backgroundColor": "#0E013F"
+        }
+      ],
+      [
+        "react-native-auth0",
+        {
+          "domain": "dev-448u1cmlqfmjb82t.us.auth0.com"
         }
       ]
     ],
