--- a/find-flow-app/package.json
+++ b/find-flow-app/package.json
@@ -21,7 +21,7 @@
     "expo": "~52.0.4",
     "expo-blur": "~14.0.1",
     "expo-constants": "~17.0.2",
-    "expo-dev-client": "~5.0.1",
+    "expo-dev-client": "~5.0.2",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
     "expo-linking": "~7.0.2",
@@ -35,6 +35,7 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.1",
+    "react-native-auth0": "^3.2.1",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
